# minimidi

./: CMakeLists.txt  LICENSE  README.md
include/: minimidi.h  minimidi_reader.h
source/: minimidi.cpp  minimidi_reader.cpp
